[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.0.0"
plotnine = "^0.13.6"
jupyterlab = "^4.2.3"
pyarrow = "^16.1.0"
umap-learn = {path = "/Users/jeroen/repos/mine/umap"}
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
