[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.0.0"
plotnine = "^0.13.6"
jupyterlab = "^4.2.3"
pyarrow = "^16.1.0"
tqdm = "^4.66.4"
umap-learn = {git = "https://github.com/jeroenjanssens/umap.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
